# HERAG-Demo-Implementation

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
demo/: ingest.py  logging_utils.py  main.py  model_provider.py  vector_store.py
demo/chain/: generate.py  rerank.py  retrieve.py  state.py
demo/chunker/: character_length_chunker.py  chunker.py  text_chunker.py  token_length_chunker.py
demo/extractor/: extractor.py
demo/extractor/pdf/: docling_pdf_extractor.py  pdf_extractor.py  pdfium_pdf_extractor.py
demo/reranker/: model_reranker.py  random_reranker.py  reranker.py
evaluation/: main.py
evaluation/configs/: example.yml
evaluation/testsets/example/: set.csv
